Atualizando configurações e o README

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,25 @@ mkdocs-material = "^9.5.33"
 mkdocstrings = "^0.25.2"
 mkdocstrings-python = "^1.10.9"
 
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.pytest.ini_options]
+pythonpath = "."
+addopts = "--doctest-modules"
+
+
+[tool.isort]
+profile = "black"
+line_length = 79
+
+
+[tool.taskipy.tasks]
+lint = "blue --check --diff . && isort --check --diff ."
+docs = "mkdocs serve"
+pre_test = "task lint"
+test = "pytest -s -x --cov=projeto_novo -vv"
+post_test = "coverage html"
